--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   IMAGE_TAG: ${{ github.sha }}
-  
+
 jobs:
   build-push-gcr:
     name: Build and Push to GCP
@@ -13,6 +13,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
+    - name: Create .env file
+      run: |
+       echo "${{ secrets.API_BINANCE_KEY }}" > .env
+       working-directory: ${{ github.workspace }}
 
     - name: Authenticate with gcloud CLI
       uses: google-github-actions/auth@v1
@@ -24,11 +29,16 @@ jobs:
       with:
         project_id: ${{ secrets.PROJECT_ID }}
 
+    - name: Login to GAR
+      uses: docker/login-action@v3
+      with:
+          registry: ${{ secrets.GKE_ZONE }}-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+
     - name: Build Docker Image
       run: docker build -t ${{ secrets.REGISTRY_URL }}/${{ secrets.PROJECT_ID }}/images/${{ secrets.IMAGE_NAME }} .
-      env:
-        BINANCE_API_KEY: ${{ secrets.BINANCE_API_KEY }}
-        BINANCE_API_SECRET: ${{ secrets.BINANCE_API_SECRET }}
+
   
     - name: Configure Docker Client
       run: |-
