--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -5,9 +5,11 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    acme.cert-manager.io/http01-edit-in-place: "true"
 spec: 
   rules:
-  - host: api.tss2024.com
+  - host: api-binance.tssw.cl
     http:
       paths:
       - backend:
@@ -19,5 +21,5 @@ spec:
         path: /
   tls:
   - hosts:
-    - api.tss2024.com
+    - api-binance.tssw.cl
     secretName: api-binance-ingress-secret
