--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: api-binance-ingress
+  name: api-binance
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -14,7 +14,7 @@ spec:
       paths:
       - backend:
           service:
-            name: api-binance-ingress
+            name: api-binance
             port:
               number: 90
         pathType: Prefix
