--- a/deploy/k8s/ingress.yaml
+++ b/deploy/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: api-binance
+  name: api-binance-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
